[gd_scene load_steps=25 format=2]

[ext_resource path="res://UI/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Enemies/Boss1.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=4]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Tree.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Bee.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/Chest.tscn" type="PackedScene" id=8]
[ext_resource path="res://Beehive.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/Gate.tscn" type="PackedScene" id=10]
[ext_resource path="res://Weapons/Axe/axe 5.png" type="Texture" id=11]
[ext_resource path="res://UI/HealthandUltra.tscn" type="PackedScene" id=13]
[ext_resource path="res://Objects/Tombstone.tscn" type="PackedScene" id=14]
[ext_resource path="res://Player/Player1.tscn" type="PackedScene" id=15]
[ext_resource path="res://Enemies/Samurai.tscn" type="PackedScene" id=16]
[ext_resource path="res://World/Level1.gd" type="Script" id=17]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 726.689, 268.374 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.8 ]
}

[sub_resource type="Animation" id=10]
resource_name = "attack1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ null, null, null, null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hitbox_enable"
}, {
"args": [  ],
"method": "hit_finished1"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "die"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ null, null, null, null, null, null, null, null, null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "hit"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ null, null, null, null, null, null, null, null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.2 ]
}

[sub_resource type="Animation" id=13]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ null, null, null, null, null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ null, null, null, null, null, null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Level1" type="Node2D"]
position = Vector2( -37.443, -697.511 )
script = ExtResource( 17 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 630.617, 1825.2 )
offset = Vector2( 200, -400 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_right = 23600
limit_bottom = 1900
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.9
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Player1" parent="." instance=ExtResource( 15 )]
position = Vector2( 630.617, 1825.2 )
z_index = 1
collision_mask = 3

[node name="AnimationTree" parent="Player1" index="3"]
parameters/playback = SubResource( 1 )

[node name="AudioStreamPlayer" parent="Player1" index="6"]
bus = "Sounds"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player1"]
remote_path = NodePath("../../Camera2D")

[node name="Boss1" parent="." instance=ExtResource( 2 )]
position = Vector2( 22867.5, 1773.46 )

[node name="PlayerDetectionZone" parent="Boss1" index="5"]
visible = false

[node name="HealthandUltra" parent="." instance=ExtResource( 13 )]

[node name="TileMap" parent="." instance=ExtResource( 3 )]
position = Vector2( -3.60504, 641.697 )
show_collision = true
collision_layer = 2
collision_mask = 0
tile_data = PoolIntArray( -393148, 4, 0, -393146, 4, 0, -393145, 4, 0, -393143, 4, 0, -327602, 4, 0, -196592, 2, 0, -196525, 4, 0, -65448, 4, 0, 16, 4, 0, 18, 4, 0, 19, 4, 0, 21, 4, 0, 22, 4, 0, 27, 0, 0, 28, 0, 0, 65563, 4, 0, 65619, 4, 0, 131104, 0, 0, 196639, 4, 0, 327677, 2, 0, 262182, 0, 0, 262222, 4, 0, 327715, 4, 0, 327752, 4, 0, 327805, 4, 0, 327806, 4, 0, 327807, 4, 0, 327808, 4, 0, 393247, 0, 0, 524285, 2, 0, 458782, 4, 0, 458828, 4, 0, 720894, 0, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 0, 655382, 4, 0, 655383, 4, 0, 655384, 4, 0, 655385, 4, 0, 655386, 4, 0, 655387, 4, 0, 655388, 4, 0, 655389, 4, 0, 655390, 4, 0, 655391, 4, 0, 655392, 4, 0, 655393, 4, 0, 655394, 4, 0, 655395, 4, 0, 655396, 4, 0, 655397, 4, 0, 655398, 4, 0, 655399, 4, 0, 655400, 4, 0, 655401, 4, 0, 655402, 4, 0, 655403, 4, 0, 655404, 4, 0, 655405, 4, 0, 655406, 4, 0, 655407, 4, 0, 655408, 4, 0, 655409, 4, 0, 655410, 4, 0, 655411, 4, 0, 655412, 4, 0, 655413, 4, 0, 655414, 4, 0, 655415, 4, 0, 655416, 4, 0, 655417, 4, 0, 655418, 4, 0, 655419, 4, 0, 655420, 4, 0, 655421, 4, 0, 655422, 4, 0, 655423, 4, 0, 655424, 4, 0, 655425, 4, 0, 655426, 4, 0, 655427, 4, 0, 655428, 4, 0, 655429, 4, 0, 655430, 4, 0, 655431, 4, 0, 655432, 4, 0, 655433, 4, 0, 655434, 4, 0, 655435, 4, 0, 655436, 4, 0, 655437, 4, 0, 655438, 4, 0, 655439, 4, 0, 655440, 4, 0, 655441, 4, 0, 655442, 4, 0, 655443, 4, 0, 655444, 4, 0, 655445, 4, 0, 655446, 4, 0, 655447, 4, 0, 655448, 4, 0, 655449, 4, 0, 655450, 4, 0, 655451, 4, 0, 655452, 4, 0, 655453, 4, 0, 655454, 4, 0, 655455, 4, 0, 655456, 4, 0, 655457, 4, 0, 655458, 4, 0, 655459, 4, 0, 655460, 4, 0, 655461, 4, 0, 655462, 4, 0, 655463, 4, 0, 655464, 4, 0, 655465, 4, 0, 655466, 4, 0, 655467, 4, 0, 655468, 4, 0, 655469, 4, 0, 655470, 4, 0, 655471, 4, 0, 655472, 4, 0, 655473, 4, 0, 655474, 4, 0, 655475, 4, 0, 655476, 4, 0, 655477, 4, 0, 655478, 4, 0, 655479, 4, 0, 655480, 4, 0, 655481, 4, 0, 655482, 4, 0, 655483, 4, 0, 655484, 4, 0, 655485, 4, 0, 655486, 4, 0, 655487, 4, 0, 655488, 4, 0, 655489, 4, 0, 655490, 4, 0, 655491, 4, 0, 655492, 4, 0, 655493, 4, 0, 655494, 4, 0, 655495, 4, 0, 655496, 4, 0, 655497, 4, 0, 655498, 4, 0, 655499, 4, 0, 655500, 4, 0, 655501, 4, 0, 655502, 4, 0, 655503, 4, 0, 655504, 4, 0, 655505, 4, 0, 655506, 4, 0, 655507, 4, 0, 655508, 4, 0, 655509, 4, 0, 655510, 4, 0, 655511, 4, 0, 655512, 4, 0, 655513, 4, 0, 655514, 4, 0, 655515, 4, 0, 655516, 4, 0, 655517, 4, 0, 655518, 4, 0, 655519, 4, 0, 655520, 4, 0, 655521, 4, 0, 655522, 4, 0, 655523, 4, 0, 655524, 4, 0, 655525, 4, 0, 655526, 4, 0, 655527, 4, 0, 655528, 4, 0, 655529, 4, 0, 655530, 4, 0, 655531, 4, 0, 655532, 4, 0, 655533, 4, 0, 655534, 4, 0, 655535, 4, 0, 655536, 4, 0, 655537, 4, 0, 655538, 4, 0, 655539, 4, 0, 655540, 4, 0, 655541, 4, 0, 655542, 4, 0, 655543, 4, 0, 655544, 4, 0, 655545, 4, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 3, 0, 720926, 3, 0, 720927, 3, 0, 720928, 3, 0, 720929, 3, 0, 720930, 3, 0, 720931, 3, 0, 720932, 3, 0, 720933, 3, 0, 720934, 3, 0, 720935, 3, 0, 720936, 3, 0, 720937, 3, 0, 720938, 3, 0, 720939, 3, 0, 720940, 3, 0, 720941, 3, 0, 720942, 3, 0, 720943, 3, 0, 720944, 3, 0, 720945, 3, 0, 720946, 3, 0, 720947, 3, 0, 720948, 3, 0, 720949, 3, 0, 720950, 3, 0, 720951, 3, 0, 720952, 3, 0, 720953, 3, 0, 720954, 3, 0, 720955, 3, 0, 720956, 3, 0, 720957, 3, 0, 720958, 3, 0, 720959, 3, 0, 720960, 3, 0, 720961, 3, 0, 720962, 3, 0, 720963, 3, 0, 720964, 3, 0, 720965, 3, 0, 720966, 3, 0, 720967, 3, 0, 720968, 3, 0, 720969, 3, 0, 720970, 3, 0, 720971, 3, 0, 720972, 3, 0, 720973, 3, 0, 720974, 3, 0, 720975, 3, 0, 720976, 3, 0, 720977, 3, 0, 720978, 3, 0, 720979, 3, 0, 720980, 3, 0, 720981, 3, 0, 720982, 3, 0, 720983, 3, 0, 720984, 3, 0, 720985, 3, 0, 720986, 3, 0, 720987, 3, 0, 720988, 3, 0, 720989, 3, 0, 720990, 3, 0, 720991, 3, 0, 720992, 3, 0, 720993, 3, 0, 720994, 3, 0, 720995, 3, 0, 720996, 3, 0, 720997, 3, 0, 720998, 3, 0, 720999, 3, 0, 721000, 3, 0, 721001, 3, 0, 721002, 3, 0, 721003, 3, 0, 721004, 3, 0, 721005, 3, 0, 721006, 3, 0, 721007, 3, 0, 721008, 3, 0, 721009, 3, 0, 721010, 3, 0, 721011, 3, 0, 721012, 3, 0, 721013, 3, 0, 721014, 3, 0, 721015, 3, 0, 721016, 3, 0, 721017, 3, 0, 721018, 3, 0, 721019, 3, 0, 721020, 3, 0, 721021, 3, 0, 721022, 3, 0, 721023, 3, 0, 721024, 3, 0, 721025, 3, 0, 721026, 3, 0, 721027, 3, 0, 721028, 3, 0, 721029, 3, 0, 721030, 3, 0, 721031, 3, 0, 721032, 3, 0, 721033, 3, 0, 721034, 3, 0, 721035, 3, 0, 721036, 3, 0, 721037, 3, 0, 721038, 3, 0, 721039, 3, 0, 721040, 3, 0, 721041, 3, 0, 721042, 3, 0, 721043, 3, 0, 721044, 3, 0, 721045, 3, 0, 721046, 3, 0, 721047, 3, 0, 721048, 3, 0, 721049, 3, 0, 721050, 3, 0, 721051, 3, 0, 721052, 3, 0, 721053, 3, 0, 721054, 3, 0, 721055, 3, 0, 721056, 3, 0, 721057, 3, 0, 721058, 3, 0, 721059, 3, 0, 721060, 3, 0, 721061, 3, 0, 721062, 3, 0, 721063, 3, 0, 721064, 3, 0, 721065, 3, 0, 721066, 3, 0, 721067, 3, 0, 721068, 3, 0, 721069, 3, 0, 721070, 3, 0, 721071, 3, 0, 721072, 3, 0, 721073, 3, 0, 721074, 3, 0, 721075, 3, 0, 721076, 3, 0, 721077, 3, 0, 721078, 3, 0, 721079, 3, 0, 721080, 3, 0, 721081, 3, 0, 721082, 3, 0, 721083, 3, 0, 786432, 3, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 3, 0, 786462, 3, 0, 786463, 3, 0, 786464, 3, 0, 786465, 3, 0, 786466, 3, 0, 786467, 3, 0, 786468, 3, 0, 786469, 3, 0, 786470, 3, 0, 786471, 3, 0, 786472, 3, 0, 786473, 3, 0, 786474, 3, 0, 786475, 3, 0, 786476, 3, 0, 786477, 3, 0, 786478, 3, 0, 786479, 3, 0, 786480, 3, 0, 786481, 3, 0, 786482, 3, 0, 786483, 3, 0, 786484, 3, 0, 786485, 3, 0, 786486, 3, 0, 786487, 3, 0, 786488, 3, 0, 786489, 3, 0, 786490, 3, 0, 786491, 3, 0, 786492, 3, 0, 786493, 3, 0, 786494, 3, 0, 786495, 3, 0, 786496, 3, 0, 786497, 3, 0, 786498, 3, 0, 786499, 3, 0, 786500, 3, 0, 786501, 3, 0, 786502, 3, 0, 786503, 3, 0, 786504, 3, 0, 786505, 3, 0, 786506, 3, 0, 786507, 3, 0, 786508, 3, 0, 786509, 3, 0, 786510, 3, 0, 786511, 3, 0, 786512, 3, 0, 786513, 3, 0, 786514, 3, 0, 786515, 3, 0, 786516, 3, 0, 786517, 3, 0, 786518, 3, 0, 786519, 3, 0, 786520, 3, 0, 786521, 3, 0, 786522, 3, 0, 786523, 3, 0, 786524, 3, 0, 786525, 3, 0, 786526, 3, 0, 786527, 3, 0, 786528, 3, 0, 786529, 3, 0, 786530, 3, 0, 786531, 3, 0, 786532, 3, 0, 786533, 3, 0, 786534, 3, 0, 786535, 3, 0, 786536, 3, 0, 786537, 3, 0, 786538, 3, 0, 786539, 3, 0, 786540, 3, 0, 786541, 3, 0, 786542, 3, 0, 786543, 3, 0, 786544, 3, 0, 786545, 3, 0, 786546, 3, 0, 786547, 3, 0, 786548, 3, 0, 786549, 3, 0, 786550, 3, 0, 786551, 3, 0, 786552, 3, 0, 786553, 3, 0, 786554, 3, 0, 786555, 3, 0, 786556, 3, 0, 786557, 3, 0, 786558, 3, 0, 786559, 3, 0, 786560, 3, 0, 786561, 3, 0, 786562, 3, 0, 786563, 3, 0, 786564, 3, 0, 786565, 3, 0, 786566, 3, 0, 786567, 3, 0, 786568, 3, 0, 786569, 3, 0, 786570, 3, 0, 786571, 3, 0, 786572, 3, 0, 786573, 3, 0, 786574, 3, 0, 786575, 3, 0, 786576, 3, 0, 786577, 3, 0, 786578, 3, 0, 786579, 3, 0, 786580, 3, 0, 786581, 3, 0, 786582, 3, 0, 786583, 3, 0, 786584, 3, 0, 786585, 3, 0, 786586, 3, 0, 786587, 3, 0, 786588, 3, 0, 786589, 3, 0, 786590, 3, 0, 786591, 3, 0, 786592, 3, 0, 786593, 3, 0, 786594, 3, 0, 786595, 3, 0, 786596, 3, 0, 786597, 3, 0, 786598, 3, 0, 786599, 3, 0, 786600, 3, 0, 786601, 3, 0, 786602, 3, 0, 786603, 3, 0, 786604, 3, 0, 786605, 3, 0, 786606, 3, 0, 786607, 3, 0, 786608, 3, 0, 786609, 3, 0, 786610, 3, 0, 786611, 3, 0, 786612, 3, 0, 786613, 3, 0, 786614, 3, 0, 786615, 3, 0, 786616, 3, 0, 786617, 3, 0, 786618, 3, 0, 786619, 3, 0, 851968, 3, 0, 851969, 3, 0, 851970, 3, 0, 851971, 3, 0, 851972, 3, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 3, 0, 851998, 3, 0, 851999, 3, 0, 852000, 3, 0, 852001, 3, 0, 852002, 3, 0, 852003, 3, 0, 852004, 3, 0, 852005, 3, 0, 852006, 3, 0, 852007, 3, 0, 852008, 3, 0, 852009, 3, 0, 852010, 3, 0, 852011, 3, 0, 852012, 3, 0, 852013, 3, 0, 852014, 3, 0, 852015, 3, 0, 852016, 3, 0, 852017, 3, 0, 852018, 3, 0, 852019, 3, 0, 852020, 3, 0, 852021, 3, 0, 852022, 3, 0, 852023, 3, 0, 852024, 3, 0, 852025, 3, 0, 852026, 3, 0, 852027, 3, 0, 852028, 3, 0, 852029, 3, 0, 852030, 3, 0, 852031, 3, 0, 852032, 3, 0, 852033, 3, 0, 852034, 3, 0, 852035, 3, 0, 852036, 3, 0, 852037, 3, 0, 852038, 3, 0, 852039, 3, 0, 852040, 3, 0, 852041, 3, 0, 852042, 3, 0, 852043, 3, 0, 852044, 3, 0, 852045, 3, 0, 852046, 3, 0, 852047, 3, 0, 852048, 3, 0, 852049, 3, 0, 852050, 3, 0, 852051, 3, 0, 852052, 3, 0, 852053, 3, 0, 852054, 3, 0, 852055, 3, 0, 852056, 3, 0, 852057, 3, 0, 852058, 3, 0, 852059, 3, 0, 852060, 3, 0, 852061, 3, 0, 852062, 3, 0, 852063, 3, 0, 852064, 3, 0, 852065, 3, 0, 852066, 3, 0, 852067, 3, 0, 852068, 3, 0, 852069, 3, 0, 852070, 3, 0, 852071, 3, 0, 852072, 3, 0, 852073, 3, 0, 852074, 3, 0, 852075, 3, 0, 852076, 3, 0, 852077, 3, 0, 852078, 3, 0, 852079, 3, 0, 852080, 3, 0, 852081, 3, 0, 852082, 3, 0, 852083, 3, 0, 852084, 3, 0, 852085, 3, 0, 852086, 3, 0, 852087, 3, 0, 852088, 3, 0, 852089, 3, 0, 852090, 3, 0, 852091, 3, 0, 852092, 3, 0, 852093, 3, 0, 852094, 3, 0, 852095, 3, 0, 852096, 3, 0, 852097, 3, 0, 852098, 3, 0, 852099, 3, 0, 852100, 3, 0, 852101, 3, 0, 852102, 3, 0, 852103, 3, 0, 852104, 3, 0, 852105, 3, 0, 852106, 3, 0, 852107, 3, 0, 852108, 3, 0, 852109, 3, 0, 852110, 3, 0, 852111, 3, 0, 852112, 3, 0, 852113, 3, 0, 852114, 3, 0, 852115, 3, 0, 852116, 3, 0, 852117, 3, 0, 852118, 3, 0, 852119, 3, 0, 852120, 3, 0, 852121, 3, 0, 852122, 3, 0, 852123, 3, 0, 852124, 3, 0, 852125, 3, 0, 852126, 3, 0, 852127, 3, 0, 852128, 3, 0, 852129, 3, 0, 852130, 3, 0, 852131, 3, 0, 852132, 3, 0, 852133, 3, 0, 852134, 3, 0, 852135, 3, 0, 852136, 3, 0, 852137, 3, 0, 852138, 3, 0, 852139, 3, 0, 852140, 3, 0, 852141, 3, 0, 852142, 3, 0, 852143, 3, 0, 852144, 3, 0, 852145, 3, 0, 852146, 3, 0, 852147, 3, 0, 852148, 3, 0, 852149, 3, 0, 852150, 3, 0, 852151, 3, 0, 852152, 3, 0, 852153, 3, 0, 852154, 3, 0, 852155, 3, 0 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="Bees" type="Node" parent="."]

[node name="Bee" parent="Bees" instance=ExtResource( 7 )]
position = Vector2( 7446.5, 1060.74 )

[node name="Bee5" parent="Bees" instance=ExtResource( 7 )]
position = Vector2( 7753.21, 964.761 )

[node name="Bee4" parent="Bees" instance=ExtResource( 7 )]
position = Vector2( 2915.3, -489.004 )

[node name="Bee3" parent="Bees" instance=ExtResource( 7 )]
position = Vector2( 7587.26, 944.979 )

[node name="Bee2" parent="Bees" instance=ExtResource( 7 )]
position = Vector2( 7734.51, 1015.52 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 50
offset = Vector2( -700, -200 )
transform = Transform2D( 1, 0, 0, 1, -700, -200 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 852.189
margin_top = 1146.54
margin_right = 2490.19
margin_bottom = 1218.54
custom_fonts/font = ExtResource( 1 )
text = "- I need to destroy that huge hive that is blocking the way."
percent_visible = 0.0

[node name="Label4" type="Label" parent="CanvasLayer"]
margin_left = 852.189
margin_top = 1146.54
margin_right = 2490.19
margin_bottom = 1218.54
custom_fonts/font = ExtResource( 1 )
text = "- This doesn't look promising.I better get prepared."
percent_visible = 0.0

[node name="Label3" type="Label" parent="CanvasLayer"]
margin_left = 852.189
margin_top = 1146.54
margin_right = 2490.19
margin_bottom = 1218.54
custom_fonts/font = ExtResource( 1 )
text = "- Oh,that looks like a portal.Where could it lead?"
percent_visible = 0.0

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 852.189
margin_top = 1146.54
margin_right = 2490.19
margin_bottom = 1218.54
custom_fonts/font = ExtResource( 1 )
text = "- The key to this gate must be around here somewhere."
percent_visible = 0.0

[node name="LabelAreas" type="Node" parent="."]

[node name="LabelArea" type="Area2D" parent="LabelAreas"]
position = Vector2( 6730.3, 1229.49 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LabelAreas/LabelArea"]
position = Vector2( 640.912, -258.374 )
shape = SubResource( 2 )

[node name="LabeBossArea" type="Area2D" parent="LabelAreas"]
position = Vector2( 17829.9, 1233.17 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LabelAreas/LabeBossArea"]
position = Vector2( 823.313, -258.374 )
shape = SubResource( 2 )

[node name="LabelGate" type="Area2D" parent="LabelAreas"]
position = Vector2( 14772.5, 1238.89 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LabelAreas/LabelGate"]
position = Vector2( 640.912, -258.374 )
shape = SubResource( 2 )

[node name="Samurais" type="Node" parent="."]

[node name="Samurai2" parent="Samurais" instance=ExtResource( 16 )]
position = Vector2( 15313.2, 1142.37 )

[node name="Samurai5" parent="Samurais" instance=ExtResource( 16 )]
position = Vector2( 15641.6, 1140.46 )
has_key = true

[node name="AnimationPlayer" parent="Samurais/Samurai5" index="2"]
anims/RESET = SubResource( 9 )
anims/attack1 = SubResource( 10 )
anims/die = SubResource( 11 )
anims/hit = SubResource( 12 )
anims/idle = SubResource( 13 )
anims/run = SubResource( 14 )

[node name="Samurai3" parent="Samurais" instance=ExtResource( 16 )]
position = Vector2( 5093.91, 1135.72 )

[node name="Samurai4" parent="Samurais" instance=ExtResource( 16 )]
position = Vector2( 4951.21, 1135.72 )

[node name="Portal" parent="." instance=ExtResource( 4 )]
position = Vector2( 22918.4, 1748.34 )

[node name="Area2D" parent="Portal" index="0"]
collision_layer = 2

[node name="Objects" type="Node" parent="."]

[node name="Chest2" parent="Objects" instance=ExtResource( 8 )]
position = Vector2( 13015.4, 1154.69 )
heartfull = false

[node name="AnimatedSprite" parent="Objects/Chest2" index="0"]
frame = 3

[node name="Gate" parent="Objects" instance=ExtResource( 10 )]
position = Vector2( 16229.3, 893.119 )

[node name="Beehive" parent="Objects" instance=ExtResource( 9 )]
position = Vector2( 8305.14, 937.099 )

[node name="Chest" parent="Objects" instance=ExtResource( 8 )]
position = Vector2( 17672.1, 1152.64 )

[node name="AnimatedSprite" parent="Objects/Chest" index="0"]
frame = 3

[node name="Tombstone" parent="Objects" instance=ExtResource( 14 )]
position = Vector2( 1821.03, 1134.03 )

[node name="Tombstone2" parent="Objects" instance=ExtResource( 14 )]
position = Vector2( 2593.38, -143.491 )

[node name="Tombstone3" parent="Objects" instance=ExtResource( 14 )]
position = Vector2( 8793.18, -906.785 )

[node name="Tree2" parent="Objects" instance=ExtResource( 6 )]
position = Vector2( 23519.1, 1005.7 )

[node name="Tree3" parent="Objects" instance=ExtResource( 6 )]
position = Vector2( 19128, 1008.4 )
z_index = -1

[node name="CollisionShape2D" parent="Objects/Tree3" index="0"]
disabled = true

[node name="Axe" type="Sprite" parent="Objects"]
position = Vector2( 19112.6, 1105.99 )
texture = ExtResource( 11 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="LabelAreas/LabelArea" to="." method="_on_LabelArea_body_entered"]
[connection signal="body_exited" from="LabelAreas/LabelArea" to="." method="_on_LabelArea_body_exited"]
[connection signal="body_entered" from="LabelAreas/LabeBossArea" to="." method="_on_LabelArea_body_entered"]
[connection signal="body_entered" from="LabelAreas/LabeBossArea" to="." method="_on_LabeBossArea_body_entered"]
[connection signal="body_exited" from="LabelAreas/LabeBossArea" to="." method="_on_LabelArea_body_exited"]
[connection signal="body_exited" from="LabelAreas/LabeBossArea" to="." method="_on_LabeBossArea_body_exited"]
[connection signal="body_entered" from="LabelAreas/LabelGate" to="." method="_on_LabelGate_body_entered"]
[connection signal="body_entered" from="LabelAreas/LabelGate" to="." method="_on_LabelArea_body_entered"]
[connection signal="body_exited" from="LabelAreas/LabelGate" to="." method="_on_LabelGate_body_exited"]
[connection signal="body_exited" from="LabelAreas/LabelGate" to="." method="_on_LabelArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Player1"]
[editable path="Player1/HitboxPivot/SwordHitbox"]
[editable path="Player1/Hurtbox"]
[editable path="Boss1"]
[editable path="Boss1/Hurtbox"]
[editable path="Boss1/PlayerDetectionZone"]
[editable path="Boss1/Hitbox"]
[editable path="Boss1/PlayerInRange"]
[editable path="Boss1/ThrowHitbox"]
[editable path="Samurais/Samurai2"]
[editable path="Samurais/Samurai2/Hurtbox"]
[editable path="Samurais/Samurai2/PlayerDetectionZone"]
[editable path="Samurais/Samurai2/PlayerInRange"]
[editable path="Samurais/Samurai2/Hitbox"]
[editable path="Samurais/Samurai2/SoftCollision"]
[editable path="Samurais/Samurai5"]
[editable path="Samurais/Samurai5/Hurtbox"]
[editable path="Samurais/Samurai5/PlayerDetectionZone"]
[editable path="Samurais/Samurai5/PlayerInRange"]
[editable path="Samurais/Samurai5/Hitbox"]
[editable path="Samurais/Samurai5/SoftCollision"]
[editable path="Portal"]
[editable path="Objects/Chest2"]
[editable path="Objects/Chest"]
[editable path="Objects/Tree3"]
